--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
   # No build command needed for static site
   publish = "."
+  command = "npm install"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -13,6 +15,17 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' https://api.anthropic.com;"
+
+# API redirects to Netlify Functions
+[[redirects]]
+  from = "/api/collaborator"
+  to = "/.netlify/functions/collaborator"
+  status = 200
+
+[[redirects]]
+  from = "/api/memory-keeper"
+  to = "/.netlify/functions/memory-keeper"
+  status = 200
 
 # Redirect rules for SPA behavior
 [[redirects]]
