--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,11 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:verbose": "jest --verbose",
+    "test:auth": "jest tests/auth",
+    "test:db": "jest tests/database",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js"
   },
