chore(env): add COLLABORATOR_MODEL and MEMORY_MODEL for demo simplicity

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 NODE_ENV=development
 PORT=3000
 
+# Model Configuration (demo)
+# Primary model used by the Collaborator agent (streaming)
+COLLABORATOR_MODEL=claude-3-5-haiku-latest
+# Optional: Memory Keeper model; if unset, server will use COLLABORATOR_MODEL
+# MEMORY_MODEL=claude-3-5-haiku-latest
+
 # Optional: Rate limiting and session management
 SESSION_SECRET=your_session_secret_here
 RATE_LIMIT_WINDOW_MS=900000
