fix(api): model whitelist + Haiku fallback; ui: default to Haiku + restrict to allowed; deploy: Render URLs; assets/docs updates; style tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# Env backups
+.env.backup.*
+
 # Runtime data
 pids
 *.pid
@@ -132,3 +135,6 @@ MANIFEST
 venv/
 ENV/
 env/
+
+# Local Netlify folder
+.netlify
