Deploy: enable Firebase auth, protected APIs, SSE; add env exposure

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,23 @@
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
 # Application Configuration
-NODE_ENV=development
 PORT=3000
+NODE_ENV=development
+
+# Session Security
+SESSION_SECRET=your_secure_session_secret_here
+
+# Firebase Configuration
+FIREBASE_PROJECT_ID=your_firebase_project_id
+FIREBASE_API_KEY=your_firebase_api_key
+FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=123456789
+FIREBASE_APP_ID=your_firebase_app_id
+
+# Firebase Admin SDK (for server-side token verification)
+# Use either service account key JSON or default credentials
+FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"..."}
 
 # Model Configuration (demo)
 # Primary model used by the Collaborator agent (streaming)
@@ -11,11 +26,13 @@ COLLABORATOR_MODEL=claude-3-5-haiku-latest
 # Optional: Memory Keeper model; if unset, server will use COLLABORATOR_MODEL
 # MEMORY_MODEL=claude-3-5-haiku-latest
 
-# Optional: Rate limiting and session management
-SESSION_SECRET=your_session_secret_here
+# Rate Limiting (optional)
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Optional: Logging and monitoring
+# CORS Configuration (optional - for cross-origin requests)
+# CORS_ORIGIN=http://localhost:3000,https://yourdomain.com
+
+# Logging and monitoring
 LOG_LEVEL=info
 ENABLE_ANALYTICS=false
