--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0"
   },
   "devDependencies": {
