--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,14 @@ COLLABORATOR_MODEL=claude-3-5-haiku-latest
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
+# Security Configuration
+MAX_MESSAGE_LENGTH=5000
+
+# Database Configuration
+DATABASE_URL=postgresql://username:password@host:port/database
+# Encryption key for sensitive data (generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+ENCRYPTION_KEY=your-64-character-hex-encryption-key-here
+
 # CORS Configuration (optional - for cross-origin requests)
 # CORS_ORIGIN=http://localhost:3000,https://yourdomain.com
 
