--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.3",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
