feat(onboarding): always show modal until user opts out; simplify auth bind; bump key to v2

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,10 @@ DATABASE_URL=postgresql://username:password@host:port/database
 # Encryption key for sensitive data (generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
 ENCRYPTION_KEY=your-64-character-hex-encryption-key-here
 
+# RAG System Configuration
+# OpenAI API key for embeddings and story processing
+OPENAI_API_KEY=your_openai_api_key_here
+
 # CORS Configuration (optional - for cross-origin requests)
 # CORS_ORIGIN=http://localhost:3000,https://yourdomain.com
 
