--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "build": "echo 'No build step needed for static files'",
-    "test": "echo 'Tests to be added'"
+    "test": "echo 'Tests to be added'",
+    "test:onboarding": "node scripts/test-onboarding-pref.js",
+    "test:api": "node scripts/test-preferences-api.js"
   },
   "keywords": [
     "ai",
@@ -29,10 +31,13 @@
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
-    "pg": "^8.16.3"
+    "openai": "^4.28.0",
+    "pg": "^8.16.3",
+    "pgvector": "^0.1.8"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.4"
   },
   "engines": {
     "node": ">=18.0.0"
