UI: flatten background behind chat (gray) and reduce radii across components\n\n- Set body background to #e5e7eb (desktop/mobile)\n- Tighten radius tokens: lg 12, md 8, sm 6, xs 3\n- Adjust hardcoded radii on buttons, inputs, chat bubbles, menus\n\nTrigger build

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,8 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Logging and monitoring
 LOG_LEVEL=info
 ENABLE_ANALYTICS=false
+
+# Feature flags / Safety switches
+# Allow authenticated users to call DELETE /api/memories for testing
+# This should remain unset or set to "false" in production.
+ENABLE_MEMORY_DELETE=false
